[tool.poetry]
name = "mudkip"
version = "0.4.12"
description = "A friendly Sphinx wrapper"
authors = ["Valentin Berlier <berlier.v@gmail.com>"]
license = "MIT"

homepage = "https://github.com/vberlier/mudkip"
repository = "https://github.com/vberlier/mudkip"
documentation = "https://github.com/vberlier/mudkip"

readme = "README.md"

keywords = [
  "documentation",
  "sphinx",
  "jupyter-notebooks",
  "autodoc",
  "doctests"
]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.2.0"
click = "^8.0.1"
watchdog = "^2.1.5"
sphinx-autodoc-typehints = "^1.12.0"
sphinx-rtd-theme = "^1.0.0"
livereload = "^2.6.3"
tomlkit = "^0.7.0"
notebook = "^6.4.4"
jupyter_nbextensions_configurator = "^0.4.1"
colorama = {version = "*", markers = 'sys_platform == "win32"'}
myst-parser = "^0.15.2"
myst-nb = "^0.13.0"
furo = "^2021.9.22"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
python-semantic-release = "^7.19.1"

[tool.poetry.scripts]
mudkip = 'mudkip.cli:main'

[tool.semantic_release]
branch = "main"
version_variable = ["mudkip/__init__.py:__version__"]
version_toml = "pyproject.toml:tool.poetry.version"
major_on_zero = false
build_command = "poetry build && poetry run mudkip build --check --update-gh-pages --repository https://x-access-token:${GH_TOKEN}@github.com/vberlier/mudkip"

[tool.mudkip]
preset = "furo"

[tool.mudkip.override]
html_title = "Mudkip"
suppress_warnings = ["myst.header"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
