[tool.poetry]
name = "mudkip"
version = "0.8.0"
description = "A friendly Sphinx wrapper"
authors = ["Valentin Berlier <berlier.v@gmail.com>"]
license = "MIT"

homepage = "https://github.com/vberlier/mudkip"
repository = "https://github.com/vberlier/mudkip"
documentation = "https://github.com/vberlier/mudkip"

readme = "README.md"

keywords = [
  "documentation",
  "sphinx",
  "jupyter-notebooks",
  "autodoc",
  "doctests"
]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^5.1.1"
click = "^8.1.3"
watchdog = "^2.1.9"
sphinx-rtd-theme = "^1.0.0"
livereload = "^2.6.3"
tomlkit = ">=0.7.0"
notebook = "^6.4.12"
jupyter-nbextensions-configurator = "^0.5.0"
colorama = {version = "*", markers = 'sys_platform == "win32"'}
myst-nb = "^0.16.0"
furo = "^2022.6.21"
sphinxcontrib-mermaid = "^0.7.1"
pydata-sphinx-theme = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
python-semantic-release = "^7.31.2"
isort = "^5.10.1"

[tool.poetry.scripts]
mudkip = 'mudkip.cli:main'

[tool.black]
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.semantic_release]
branch = "main"
version_variable = ["mudkip/__init__.py:__version__"]
version_toml = "pyproject.toml:tool.poetry.version"
major_on_zero = false
build_command = "poetry build && poetry run mudkip build --check --update-gh-pages --repository https://x-access-token:${GH_TOKEN}@github.com/vberlier/mudkip"

[tool.mudkip]
preset = "furo"

[tool.mudkip.override]
html_title = "Mudkip"
suppress_warnings = ["myst.header"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
